--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,80 @@
-* {
-  margin: 0px;
-  padding: 0px;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 16px;
 }
 
 body {
-  padding: 10px;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 1rem;
+  background-color: rgb(21, 4, 48);
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.main {
+  width: 80%;
+  margin: auto;
+}
+
+.header {
+  text-align: center;
+}
+
+.form {
+  margin: 0;
+  padding: 0;
+}
+
+.input-control {
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 16px;
+  min-width: 400px;
+  padding: 0.8rem;
+  margin: 0.5rem auto;
+  border-radius: 0.5rem;
+  border: none;
+  box-shadow: 2px 2px 9px 7px #00000021;
+}
+
+.input-control:focus {
+  outline: none;
+}
+
+.input-area {
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 16px;
+  min-width: 400px;
+  min-height: 56px;
+  margin: 0.5rem auto;
+  padding: 0.8rem;
+  border-radius: 0.5rem;
+  border: none;
+  box-shadow: 2px 2px 9px 7px #00000021;
+}
+
+.input-area:focus {
+  outline: none;
+}
+
+.input-btn {
+  font-family: "Roboto", Helvetica, sans-serif;
+  font-size: 16px;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.8rem;
+  background-color: #fff;
+  text-transform: uppercase;
 }
 
 .issue {
